# DomainCausation

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  make_figures.sh  pyproject.toml
.github/workflows/: ci.yml
figures/: README.md
scripts/: control_confounding.py  control_moredomain.py  control_noise.py  control_shift.py  control_simple.py  correlated.py  domain_difference.py  separate.py  separate_and_correlated.py  uncorrelated.py
src/causation/: __init__.py  data.py  models.py  plot.py
